# django-polls-and-training

./: README.rst  requirements.txt  setup.cfg
django_polls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
polls/: .env(example)  __init__.py  admin.py  apps.py  backends.py  celery.py  custom_layout_object.py  forms.py  middleware.py  models.py  send_requests.py  signals.py  tasks.py  urls.py  views.py
polls/management/commands/: votes_inc.py
polls/migrations/: 0001_initial.py  0004_alter_question_author.py  0005_auto_20220707_1718.py  0006_alter_question_author.py  0007_authorbalance.py  0008_auto_20220718_0939.py  0009_alter_authorbalance_author.py  0010_commontariff_commontarifftwo_tarifffixed_and_more.py  0011_userprofile.py  0013_rename_user_userprofile_profile.py  0014_auto_20220729_1310.py
polls/templates/polls/: agreement.html  author_balance_detail.html  author_balance_list.html  base.html  detail.html  donator_detail.html  donator_list.html  formset.html  index.html  question_create.html  question_create_m.html  question_update_m.html  results.html
